--- a/src/VStabi.Parser/VStabi.Parser.csproj
+++ b/src/VStabi.Parser/VStabi.Parser.csproj
@@ -1,11 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
-  </ItemGroup>
+	<PropertyGroup>
+		<PackageId>RichardV.VStabi.Parse</PackageId>
+		<Version>1.0.0.0</Version>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/richardv/VStabi.Parser</RepositoryUrl>
+		<Description>A library to parse VStabi files.</Description>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="HtmlAgilityPack" Version="1.11.43" />
+	</ItemGroup>
 
 </Project>
