--- a/src/VStabi.CloudReader/VStabi.CloudReader.csproj
+++ b/src/VStabi.CloudReader/VStabi.CloudReader.csproj
@@ -1,11 +1,19 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-  <PropertyGroup>
-    <TargetFramework>netstandard2.0</TargetFramework>
-  </PropertyGroup>
+	<PropertyGroup>
+		<TargetFramework>netstandard2.0</TargetFramework>
+	</PropertyGroup>
 
-  <ItemGroup>
-    <ProjectReference Include="..\VStabi.Parser\VStabi.Parser.csproj" />
-  </ItemGroup>
+	<PropertyGroup>
+		<PackageId>RichardV.VStabi.Cloud</PackageId>
+		<Version>1.0.0.0</Version>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryUrl>https://github.com/richardv/VBar.Setups</RepositoryUrl>
+		<Description>A library to download VStabi files.</Description>
+	</PropertyGroup>
+
+	<ItemGroup>
+		<PackageReference Include="RichardV.VStabi.Parser" Version="1.0.0" />
+	</ItemGroup>
 
 </Project>
